review-5: 5번째 코드 리뷰 요청  (#98)
* init: add branch rules

* fix: README.md (git flow)

* btsk-1 : 초기 환경설정 (#1)

chore : 초기 환경설정 (btsk-1)
```
com.pullit
├─ boot/                          # 애플리케이션 부트스트랩 및 설정
│  ├─ PullitApplication.java      # 메인 애플리케이션 클래스
│  ├─ properties/                 # 애플리케이션 설정 프로퍼티
│  │  ├─ AppProps.java            # 애플리케이션 공통 설정
│  │  └─ SecurityProps.java       # 보안 관련 설정
│
├─ shared/                        # 도메인 무관 공통 (작고 순수하게)
│  ├─ error/                      # 에러 처리 관련 클래스들
│  │  ├─ ApiErrorResponse.java    # API 에러 응답 포맷
│  │  ├─ ErrorCode.java           # 애플리케이션 에러 코드 정의
│  │  └─ GlobalExceptionAdvice.java # 글로벌 예외 처리
│  ├─ jpa/                        # JPA 관련 공통 컴포넌트
│  │  ├─ AuditingConfig.java      # JPA 감사(Auditing) 설정
│  │  └─ BaseEntity.java          # 엔티티 기본 클래스
│  ├─ types/                      # 값 객체(Value Object) 타입들
│  │  └─ YearWeek.java            # 연도-주차 값 객체
│
├─ platform/                      # 크로스컷팅 관심사 (도메인 독립적)
│  ├─ security/                   # 애플리케이션 보안 설정
│  │  ├─ config/                  # 보안 설정 클래스들
│  │  │  └─ SecurityConfig.java   # Spring Security 메인 설정
│  │  ├─ jwt/                     # JWT 토큰 처리
│  │  │  ├─ JwtAuthenticationFilter.java # JWT 인증 필터
│  │  │  └─ JwtTokenProvider.java # JWT 토큰 생성/검증
│  │  ├─ handler/                 # 보안 예외 처리 핸들러
│  │  │  ├─ RestAuthenticationEntryPoint.java # 인증 실패 처리
│  │  │  └─ RestAccessDeniedHandler.java # 접근 거부 처리
│  │  └─ principal/               # 사용자 인증 정보
│  │     └─ AuthUserPrincipal.java # 인증된 사용자 정보
│  ├─ storage/                    # 파일 스토리지 시스템
│  │  ├─ core/                    # 스토리지 핵심 인터페이스
│  │  │  ├─ FileStorage.java      # 파일 스토리지 인터페이스
│  │  │  ├─ FilePathPolicy.java   # 파일 경로 정책
│  │  │  ├─ FileValidation.java   # 파일 유효성 검증
│  │  │  └─ StorageProps.java     # 스토리지 설정
│  │  ├─ local/                   # 로컬 파일 시스템 스토리지
│  │  │  └─ LocalFileStorage.java # 로컬 파일 저장 구현
│  │  └─ s3/                      # AWS S3 스토리지
│  │     ├─ S3FileStorage.java     # S3 파일